# arabic-legal-research-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_INDEPENDENT_AUDIT_REPORT.md  CLAUDE_POST_REMEDIATION_ACCEPTANCE_REPORT.md  CLAUDE_RECOMMENDED_ACTIONS.md  CLAUDE_RELEASE_INTEGRITY_REPORT.md  CLAUDE_REMEDIATION_IMPLEMENTATION_REPORT.md  CLAUDE_SECURITY_FINDINGS.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_FRAMEWORK_UPGRADE_REPORT.md  FINAL_PROJECT_ACCEPTANCE_REPORT.md  FINAL_RELEASE_CHECKLIST.md  GPT.md  LICENSE  PHASE_2_ACCEPTANCE_REPORT.md  PHASE_3_ACCEPTANCE_REPORT.md  PHASE_3_IMPLEMENTATION_REPORT.md  PHASE_4_IMPLEMENTATION_REPORT.md  PHASE_5_IMPLEMENTATION_REPORT.md  PHASE_6_IMPLEMENTATION_REPORT.md  PHASE_6_REVIEW_REPORT.md  README.md  README_PROFESSIONAL_UPGRADE_REPORT.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
checklists/: citation-review.md  final-review.md  formatting-review.md  methodology-review.md
docs/: architecture.md  framework-vs-skill.md  limitations.md  quickstart.md
examples/: README.md
playbooks/: developer.md  general-user.md  lawyer.md  researcher.md  student.md
prompts/: chatgpt.md  claude.md  codex.md  general-use.md
reports/: PHASE_0_FULL_AUDIT.md  PHASE_1_CLEANUP_REPORT.md  PHASE_2_LICENSE_REPORT.md  PHASE_3_FRAMEWORK_IDENTITY_REPORT.md  PHASE_4_MODEL_PROMPTS_REPORT.md  PHASE_5_PLAYBOOKS_WORKFLOWS_REPORT.md  PHASE_6_README_REPORT.md  PHASE_7_EXAMPLES_REPORT.md  PHASE_8_QA_REPORT.md  claude-independent-audit.json  claude-remediation-result.json  claude-remediation-start-state.json  final-acceptance.json  phase-5-acceptance.json  phase-6-start-state.json  word-environment-diagnostic.json
rules/: bibliography.md  citations.md  decision-engine.md  error-recovery.md  footnotes.md  formatting.md  language.md  output-contract.md  phase-3-traceability.md  phase-4-traceability.md  police-academy-methodology.md  priority-hierarchy.md  structure.md  task-memory.md  terminology.md
schemas/: README.md
scripts/: README.md
templates/: README.md
tests/: README.md  conftest.py
validators/: README.md  bibliography-reviewer.md  citation-reviewer.md  docx-readiness-reviewer.md  final-qa-reviewer.md  footnote-reviewer.md  formatting-reviewer.md  language-reviewer.md  methodology-reviewer.md  plan-reviewer.md
workflows/: case-analysis.md  contract-review.md  docx-production.md  final-review.md  legal-memo.md  legal-research.md
(+120 files in other folders)
