[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-legal-research-skill"
version = "0.3.0"
description = "Executable text-level validation substrate for Arabic legal research task state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
legal-research-skill = "legal_research_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -p no:cacheprovider --cov=legal_research_skill --cov-branch --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
branch = true
source = ["legal_research_skill"]

[tool.coverage.report]
fail_under = 95
show_missing = true
omit = ["src/legal_research_skill/__main__.py"]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF012"]
