[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-legal-research-skill"
version = "0.3.0"
description = "Executable Arabic legal research validation and structural DOCX artifact pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-cov>=5.0,<8",
  "ruff>=0.5,<1",
]

[project.scripts]
legal-research-skill = "legal_research_skill.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legal_research_skill = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -p no:cacheprovider --cov=legal_research_skill --cov-branch --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
branch = true
source = ["legal_research_skill"]

[tool.coverage.report]
fail_under = 95
show_missing = true
omit = ["src/legal_research_skill/__main__.py"]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF012"]
